[package]
name = "assignment-3-problem-1"
version = "0.1.0"
authors = ["Blake Wyatt <blakewy@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
atomic-markable-ptr = {git = "https://github.com/jamescarterbell/AtomicMarkablePtr.git", branch = "main"}
